- fixed a bug where coordinates would be detected as Cartesian instead of reduced if the cell was very small. Thanks to Davide Sangiovanni, Linköping University, Sweden, for pointing out this bug.
- fixed a bug when reading/writing Extended XYZ format where lattice vectors were in wrong order. Thanks to Yanzhou Wang, Aalto University, Finland, for pointing out this bug.
- fixed a bug in mode "--polycrystal" that prevented constructing 2-D polycrystals normal to X or Y. Also fixed a bug where the seed was not sufficiently duplicated if the seed was not orthogonal; thanks to Zheyuan Xing, Southwest Jiaotong University, China, for pointing out this bug.
- fixed a bug in option "-add-atom" that caused a segfault when the atom list was empty (not allocated).


Beta 0.11 (12 Jan. 2021)
------------------------
- parts of the code were parallelized with OpenMP, meaning that it can take advantage of all cores of a CPU. Some modes and options that are now parallelized: neighbor search; options "-orthogonal-cell", "-select stl"; modes "--density", "--edm", "--polycrystal", "--rdf". Thanks to Jian-Hui Zhai, University of Lille, France, for initiating this speeding up of Atomsk.
- added support for reading and writing files in BOPfox format (*.bx). Thanks to Matous Mrovec, ICAMS, Bochum University, Germany, for implementing this feature.
- added support for reading and writing files in Comma-Separated Values format (*.csv).
- added support for reading and writing files in CRYSTAL format (*.d12).
- added support for reading and writing files in ABINIT format (*.in).
- added support for reading and writing files in SIESTA Flexible Data Format (*.fdf).
- new option "-cell" allows to modify cell vectors more easily.
- new option "-nthreads" to control the number of OpenMP threads.
- new option "-reduce-cell" allows finding an equivalent smaller cell to a system, while respecting its periodicity.